Minor warning fixes and bug squashing + Landing page update

--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -59,6 +59,19 @@ margin: 10px 85px;
   flex-direction: row;
   align-items: center;
 }
+.pt2-header {
+  font-size: 35px;
+}
 .pt2-copy {
-  margin: 0 -200px 0 200px;;
+  margin: 0 70px 0 0;
+}
+.pt2-img {
+  height: 300px;
+  margin: 50px 70px;
+}
+.landing-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
